# ZoneMinder

./: Makefile.am  zm.conf.in
scripts/: zmpkg.pl.in  zmsystemctl.pl.in
scripts/ZoneMinder/: CMakeLists.txt
scripts/ZoneMinder/lib/ZoneMinder/: Config.pm.in  ConfigAdmin.pm  ConfigData.pm.in
src/: zm_comms.h  zm_image.cpp
web/: Makefile.am
web/api/lib/Cake/Cache/Engine/: ApcEngine.php
web/api/lib/Cake/Test/Case/Cache/Engine/: ApcEngineTest.php
web/includes/: config.php.in  functions.php  lang.php
web/lang/: de_de.php  hu_hu.php
web/skins/classic/views/: console.php  filter.php  montagereview.php
web/skins/flat/views/: console.php  filter.php
web/skins/xml/: skin.php
